Closed Bug 487456 Opened 16 years ago Closed 16 years ago

Modify VMPI_debugBreak implementation for Unix to allow continued debugging

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rishah, Unassigned)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.5) Gecko/2008120121 Firefox/3.0.5 Build Identifier: Currently, VMPI_debugBreak implementation for Unix calls abort(). This prevents the developer from continuing the program debugging. Modify the implementation to allow the developer to continue debugging in the way debugBreak does on Windows. Reproducible: Always
Attached patch [v1] patchSplinter Review
Attachment #372448 - Flags: review?(stejohns)
Attachment #372448 - Flags: review?(stejohns) → review+
changeset 1764 6190158a5d0e
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: