Fix for bug 487456 -  Modify VMPI_debugBreak implementation for Unix to allow continued debugging (r=stejohns+)